# AoC2020

./: LICENSE
1/: Main.hs  answer
10/: answer  build.nix  shell.nix
10/src/: Main.hs
11/: .gitignore  Main.idr  answer  shell.nix
12/: answer
12/src/: Main.hs
13/: .gitignore  default.nix  shell.nix
13/src/: Main.hs
14/: .gitignore  Main.idr  shell.nix
15/: Main.idr  shell.nix
16/: Main.idr
17/: Main.idr  main.cabal  messages  rules
17/src/: Main.hs
18/src/: Main.hs
19/: Main.idr
2/: Main.hs  answer  data_words
20/: Main.idr
24/: Main.idr  answer
25/: Main.idr
3/: Main.hs  answer
4/: Main.hs  data_lines  data_lines2
5/: Main.hs
6/: .gitignore  Main.idr  answer  shell.nix
7/: Main.hs  answer
8/: Main.hs  answer
9/: answer
9/src/: Main.hs
